# pear-runtime-bare

./: .gitignore  .gitmodules  CMakeLists.txt  entitlements.mac.plist  package.json
src/: entry.c  main.c  main.js
test/: CMakeLists.txt
test/fixtures/: CMakeLists.txt
